--- a/app/static/css/pages/login.css
+++ b/app/static/css/pages/login.css
@@ -8,7 +8,12 @@
     font-family: 'Inter', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -16,13 +21,14 @@ h1, h2, h3, h4, h5, h6 {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
     box-sizing: border-box;
 }
 
-.login-form input {
+.login-form input,
+.login-form select {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
