--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -131,6 +131,9 @@
         </div>
         <div class="profile-menu" id="profile-menu">
           <a href="{{ url_for('auth_bp.profile') }}"><i class="fas fa-user-edit"></i> User Profile</a>
+          {% if is_authorized(Permissions.ABOUT_CLUB_VIEW) %}
+          <a href="{{ url_for('settings_bp.about_club') }}"><i class="fas fa-info-circle"></i> About Club</a>
+          {% endif %}
           <a href="{{ url_for('auth_bp.logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
       </div>
