--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -53,7 +53,7 @@
 
     <input type="hidden" name="action" value="update_profile" />
     <table class="form-table">
-      <tr>
+      <tr class="tr-full-width">
         <td><label>Full Name</label></td>
         <td>
           {{ user.contact.Name if user.contact else '' }} ({{ user.Username }}) {%
